add media refs to patients
