# server/execution/services/entityloader.py
@@ -99,17 +99,18 @@ def __load_patients(scenario_id: int) -> dict[int, Patient]:
 
         # Load Activity Diagram
         p_ad = p.activity_diagram
+        p_media = p.media_refs
         try:
             p_ad = ActivityDiagram().from_json(json_string=p_ad)
+            p_media = MediaData.list_from_json(p_media)
         except JSONDecodeError:  # thrown if p_ad is None or an invalid json string
             p_ad = ActivityDiagram()  # empty diagram with an empty root state
         except TypeError:
             p_ad = ActivityDiagram()  # empty diagram with an empty root state
 
         # Create Patient
-        patients[p.id] = Patient(id=__generate_id(), name=mapping.name, activity_diagram=p_ad,
-                                 # type: ignore
-                                 location=p_loc, performed_actions=[])  # type: ignore
+        patients[p.id] = Patient(id=__generate_id(), name=mapping.name, activity_diagram=p_ad, # type: ignore
+                                 location=p_loc, performed_actions=[], media_references=p_media)  # type: ignore
 
     return patients
 
